gitops/node-red-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-red
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 1880
    protocol: TCP
    targetPort: ui
    name: ui
  selector:
    app: node-red
  sessionAffinity: None
